# RustChess

./: .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
blendermodels/: Bishop.blend  BishopFancy.blend  King.blend  Knight.blend  Pawn.blend  Queen.blend  Rook.blend
chess/: Cargo.toml
chess/src/: interface.rs  main.rs
chess/src/game_logic/: ai.rs  gameplay.rs  mod.rs  player.rs
ci/: check-basic-style.sh  run-all.sh  test-all.sh
dev/: Cargo.toml  build.rs
dev/src/: data.rs  graphics.rs  main.rs  model.rs  system.rs
dev/src/chess/: ai.rs  logic.rs  mod.rs  player.rs
dev/src/data/: bishop.rs  bishopfancy.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
src/: graphics.rs  main.rs  system.rs
src/chess/: ai.rs  logic.rs  mod.rs  player.rs
src/data/: bishop.rs  bishopfancy.rs  king.rs  knight.rs  pawn.rs  queen.rs  rook.rs
