[package]
name = "dev"
version = "0.1.0"
authors = ["Franziska Becker <buecher.apps@gmail.com>"]
build = "build.rs"

[dependencies]
vulkano = "0.3.2"
vulkano-win = "0.3.2"
cgmath = "0.12.0"
image = "0.6.1"
winit = "0.5.2"
time = "0.1.35"

[build-dependencies]
vk-sys = "0.2.2"
vulkano-shaders = "0.3.2"
